--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
             <section>
                 <div class="circles">
                         <figure>
-                            <img src="./src/img/hängendelampen.jpg" alt="">
+                            <img src="./src/img/lamps.PNG" alt="">
                             <figcaption>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. </figcaption>
                         </figure>
                         <figure >
-                            <img src="./src/img/mannhinterbaum.jpg" alt="">
+                            <img src="./src/img/manbehindtree.PNG" alt="">
                             <figcaption >Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. </figcaption>
                         </figure>
                         <figure >
-                            <img src="./src/img/Feldweg.jpg" alt="">
+                            <img src="./src/img/view.PNG" alt="">
                             <figcaption >Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. </figcaption>
                         </figure>
                 </div>
