change style to boxes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </header>    
         <main>  
             <section> 
-                <div>
+                <div class="maintext">
                     <h2>Photography ... </h2>
                     <p> ... Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
                     <br>
@@ -51,7 +51,7 @@
                 <div class="formcontainer">
                     <div class="form">
                         <h3>Contact</h3>
-                        <form  action="" method="POST"></form>
+                        <form  action="" method=""></form>
                         <input type="text" id="name name= "name" placeholder="Name">
                         <input type="text" id="email" name="email" placeholder="Email">
                         <textarea name="" id="" cols="30" rows="4" placeholder="Your Message!"></textarea>
