fix submit button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <header class="header-container" id="top">
+    <header class="header-container">
       <nav class="navigation">
         <ul>
           <li><a href="#top">Home</a></li>
@@ -89,17 +89,30 @@
         <div class="formcontainer">
           <div class="form">
             <h3>Contact</h3>
-            <form action="" method=""></form>
-            <input type="text" id="name" name="name" placeholder="Name" />
-            <input type="text" id="email" name="email" placeholder="Email" />
-            <textarea
-              name=""
-              id=""
-              cols="30"
-              rows="4"
-              placeholder="Your Message!"
-            ></textarea>
-            <input type="submit" id="submit" name="submit" value="Submit" />
+            <form action="" method="">
+              <input
+                type="text"
+                id="name"
+                name="name"
+                placeholder="Name"
+                required
+              />
+              <input
+                type="text"
+                id="email"
+                name="email"
+                placeholder="Email"
+                required
+              />
+              <textarea
+                name=""
+                id=""
+                cols="30"
+                rows="4"
+                placeholder="Your Message!"
+              ></textarea>
+              <input type="submit" id="submit" name="submit" value="Submit" />
+            </form>
           </div>
         </div>
       </section>
