--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </header>
     <main>
       <section>
+        <div class="title"><h1>Primer Blog</h1></div>
         <div class="blogentry">
           <h2>First Entry</h2>
           <p>
