add social media icons

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Maven+Pro&family=Patua+One&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/d7e12b4a2b.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="header-container">
@@ -148,6 +152,11 @@
         Blog Project for
         <a href="https://www.wbscodingschool.com/"> WBS CODING SCHOOL</a>
       </p>
+      <div class="icons">
+        <a href="https://www.instagram.com/le_plue/"<i class="fab fa-instagram"></i><a/>
+        <i class="fab fa-facebook"></i>
+        <a href=" www.linkedin.com/in/patrick-plüquett"<i class="fab fa-linkedin-in"></i></a>
+      </div>
     </footer>
   </body>
 </html>
