--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="date">
             <p>2022/01/03</p>
           </div>
-          <h2>First Entry</h2>
+          <h2>First Post</h2>
           <p>
             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
             nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
@@ -51,7 +51,7 @@
           <div class="date">
             <p>2022/02/06</p>
           </div>
-          <h2>Second Entry</h2>
+          <h2>Second Post</h2>
           <p>
             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
             nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
@@ -68,7 +68,7 @@
           <div class="date">
             <p>2022/10/08</p>
           </div>
-          <h2>Third Entry</h2>
+          <h2>Third Post</h2>
           <p>
             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
             nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
@@ -88,28 +88,19 @@
           <figure>
             <img src="./src/img/lamps.PNG" alt="" />
             <figcaption>
-              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-              erat, sed diam voluptua. At vero eos et accusam et justo duo
-              dolores et ea rebum.
+              Lorem ipsum dolor sit amet
             </figcaption>
           </figure>
           <figure>
             <img src="./src/img/manbehindtree.PNG" alt="" />
             <figcaption>
-              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-              erat, sed diam voluptua. At vero eos et accusam et justo duo
-              dolores et ea rebum.
+              Lorem ipsum dolor sit amet
             </figcaption>
           </figure>
           <figure>
             <img src="./src/img/view.PNG" alt="" />
             <figcaption>
-              Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-              nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-              erat, sed diam voluptua. At vero eos et accusam et justo duo
-              dolores et ea rebum.
+              Lorem ipsum dolor sit amet
             </figcaption>
           </figure>
         </div>
@@ -141,7 +132,7 @@
                 rows="4"
                 placeholder="Your Message!"
               ></textarea>
-              <input type="submit" id="submit" name="submit" value="Submit" />
+              <input type="submit" id="submit" name="submit" value="Submit" />            
             </form>
           </div>
         </div>
@@ -154,7 +145,6 @@
       </p>
       <div class="icons">
         <a href="https://www.instagram.com/le_plue/"<i class="fab fa-instagram"></i><a/>
-        <i class="fab fa-facebook"></i>
         <a href=" www.linkedin.com/in/patrick-plüquett"<i class="fab fa-linkedin-in"></i></a>
       </div>
     </footer>
