--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     ></script>
   </head>
   <body>
+    <!-- Header -->
     <header class="header-container">
+      <!-- Nav -->
       <nav class="navigation">
         <ul>
           <li><a href="#top">Home</a></li>
@@ -27,6 +29,7 @@
         </ul>
       </nav>
     </header>
+    <!-- Blogposts -->
     <main>
       <section>
         <div class="title"><h1>Primer Blog</h1></div>
@@ -81,6 +84,7 @@
             no sea takimata sanctus est Lorem ipsum dolor sit amet.
           </p>
         </div>
+        <!-- Gallery -->
       </section>
       <hr id="gallery" />
       <section>
@@ -106,6 +110,7 @@
         </div>
       </section>
       <hr />
+      <!-- Form -->
       <section id="contact">
         <div class="formcontainer">
           <div class="form">
@@ -138,6 +143,7 @@
         </div>
       </section>
     </main>
+    <!-- Footer -->
     <footer>
       <p id="footer">
         Blog Project for
