--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                 name="email"
                 placeholder="Email"
                 required
+                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
               />
               <textarea
                 name=""
