add fourth post

--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
             no sea takimata sanctus est Lorem ipsum dolor sit amet.
           </p>
         </div>
+          <div class="blogentry">
+          <div class="date">
+            <p></p>
+          </div>
+          <h2></h2>
+          <p>
+            ...
+          </p>
+        </div>
         <!-- Gallery -->
       </section>
       <hr id="gallery" />
